--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,6 +5,7 @@
 
     <item android:id="@+id/navi_menu"
         android:title="ナビメニュー"
+        android:iconTint="@color/colorWhite"
         android:icon="@drawable/ic_dehaze_black_24dp"
         app:showAsAction="always"/>
 
