CompDetailとTLでサムネ取得 CompDetailからようつべActivityに飛ばして再生できるようにした

--- a/app/src/main/res/layout/recycler_item_comp_detail.xml
+++ b/app/src/main/res/layout/recycler_item_comp_detail.xml
@@ -13,8 +13,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <VideoView
-                android:id="@+id/compDetailVideoView"
+            <ImageView
+                android:id="@+id/compDetailImageView"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_weight="1" />
