--- a/app/src/main/res/layout/recycler_item_mypage.xml
+++ b/app/src/main/res/layout/recycler_item_mypage.xml
@@ -69,7 +69,12 @@
                 android:layout_height="144dp"
                 app:cardCornerRadius="10dp"
                 android:layout_marginBottom="8dp"
-                />
+                >
+                <ImageView
+                    android:id="@+id/timeline_thumbnail_image_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </android.support.v7.widget.CardView>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
