--- a/app/src/main/res/layout/player_control_layout.xml
+++ b/app/src/main/res/layout/player_control_layout.xml
@@ -6,48 +6,48 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/ic_arrow_back_24dp"
-        android:backgroundTint="@color/colorWhite" />
+    <!--<ImageView-->
+        <!--android:layout_width="60dp"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:background="@drawable/ic_arrow_back_24dp"-->
+        <!--android:backgroundTint="@color/colorWhite" />-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:layout_marginLeft="8dp">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:layout_marginLeft="8dp">-->
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom"-->
+            <!--android:orientation="vertical">-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal">-->
 
-                <TextView
-                    android:id="@+id/player_compe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="競技名"
-                    android:textColor="#fff"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/player_compe"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="競技名"-->
+                    <!--android:textColor="#fff"-->
+                    <!--android:textSize="30dp"-->
+                    <!--android:textStyle="bold" />-->
+            <!--</LinearLayout>-->
 
-            <TextView
-                android:id="@+id/player_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ユーザ名"
-                android:textColor="#fff"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/player_username"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="ユーザ名"-->
+                <!--android:textColor="#fff"-->
+                <!--android:textSize="20dp"-->
+                <!--android:textStyle="bold" />-->
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
 
 </LinearLayout>
