--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,21 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
         <group android:checkableBehavior="single">
             <item
-                android:id="@+id/nav_camera"
+                android:id="@+id/nav_sign_in"
                 android:icon="@mipmap/ic_launcher"
-                android:title="Import" />
+                android:title="Sign in" />
             <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/nav_sign_out"
                 android:icon="@mipmap/ic_launcher"
-                android:title="Gallery" />
+                android:title="Sign out" />
             <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/nav_edit"
                 android:icon="@mipmap/ic_launcher"
-                android:title="Slideshow" />
-            <item
-                android:id="@+id/nav_manage"
-                android:icon="@mipmap/ic_launcher"
-                android:title="Tools" />
+                android:title="Edit" />
         </group>
 
         <item android:title="Communicate">
