--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -3,12 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="HotFragment">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="ランキングを見るところ"/>
+    tools:context=".hot.HotFragment">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/hotRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </FrameLayout>
