--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,7 +39,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="ユーザー名"
                 android:textColor="#fff"
-                android:textSize="24dp" />
+                android:textSize="24sp" />
             <!--<EditText-->
             <!--android:id="@+id/uploadEditText"-->
             <!--android:layout_width="match_parent"-->
@@ -56,7 +57,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="00:00:00"
                 android:textColor="#fff"
-                android:textSize="40dp"
+                android:textSize="40sp"
                 android:textStyle="italic" />
 
             <Button
@@ -66,16 +67,6 @@
                 android:layout_gravity="center"
                 android:background="@drawable/gradientbackground1"
                 android:text="Upload"
-                android:textColor="#fff" />
-
-            <Button
-                android:id="@+id/catchButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginVertical="10dp"
-                android:background="@drawable/gradientbackground1"
-                android:text="Catch"
                 android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
