--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -7,22 +7,38 @@
     android:background="#f9f9f9"
     android:orientation="vertical">
     <RelativeLayout
+        android:clickable="true"
+        android:id="@+id/myPage_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+        <Button
+            android:id="@+id/myPageProfileEditButton"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/gradientbackground1"
+            android:text="変更"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <LinearLayout
             android:background="@drawable/gradientbackground"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/myPageUserIcon"
+                android:clickable="false"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:tint="@color/colorWhite"
                 android:src="@drawable/ic_account_circle_black_150dp"/>
-            <TextView
+            <EditText
+                android:inputType="text"
+                android:focusable="false"
                 android:id="@+id/myPage_username_textView"
                 android:layout_marginTop="8dp"
                 android:layout_gravity="center_horizontal"
