--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             android:id="@+id/uploadVideoPreviewView"
             android:layout_width="wrap_content"
-            android:layout_height="280dp" />
+            android:layout_height="480dp" />
 
         <LinearLayout
             android:layout_weight="1"
@@ -67,6 +67,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/gradientbackground1"
                 android:text="Upload"
+                android:layout_marginBottom="60dp"
                 android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
