--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/nav_header_imageView"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_width="wrap_content"
@@ -27,19 +27,18 @@
             android:src="@android:drawable/sym_def_app_icon" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/nav_header_name"
             android:layout_marginStart="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Android Studio"
+            android:text="guest"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-        <TextView
-            android:id="@+id/email"
-            android:layout_marginStart="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="android.studio@android.com" />
+        <!--<TextView-->
+            <!--android:id="@+id/nav_header_email"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 
