--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,150 +5,164 @@
     android:background="@drawable/gradientbackground"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="40dp">
-
-    <ImageView
-        android:id="@+id/appTitle"
-        android:layout_width="400dp"
-        android:layout_height="60dp"
-        android:src="@mipmap/engord_splash" />
+    >
 
     <LinearLayout
-        android:weightSum="3"
+        android:layout_marginTop="60dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:layout_weight="1"
             android:layout_gravity="center"
-            android:id="@+id/modeTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:src="@mipmap/login" />
-
-        <com.google.android.gms.common.SignInButton
-            android:layout_marginVertical="10dp"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:id="@+id/google_signin_button"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content" />
+            android:id="@+id/appTitle"
+            android:layout_width="400dp"
+            android:layout_height="60dp"
+            android:src="@mipmap/engord_splash" />
 
         <LinearLayout
-            android:id="@+id/orBorder"
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:weightSum="3">
 
             <ImageView
-                android:layout_gravity="center"
+                android:id="@+id/modeTitle"
                 android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:src="@mipmap/login" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/google_signin_button"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:layout_marginHorizontal="30dp"
+                android:id="@+id/orBorder"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/white_border" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="8dp"
-                android:text="OR"
-                android:textColor="#fff" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/white_border" />
 
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/white_border" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="8dp"
+                    android:text="OR"
+                    android:textColor="#fff" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/white_border" />
+            </LinearLayout>
         </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="#cccccc">
+
+            <EditText
+                android:id="@+id/login_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#ffff"
+                android:drawableStart="@drawable/ic_account_circle_black_24dp"
+                android:hint="   Email"
+                android:inputType="textEmailAddress"
+                android:textColor="#cccccc"
+                android:textSize="20sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginHorizontal="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColorHint="#cccccc">
+
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#ffff"
+                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+                android:hint="   Password"
+                android:inputType="textPassword"
+                android:textColor="#cccccc"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColorHint="#cccccc">
+
+            <EditText
+                android:id="@+id/sign_up_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#ffff"
+                android:drawableStart="@drawable/ic_account_circle_black_24dp"
+                android:hint="   Username"
+                android:inputType="textPersonName"
+                android:textColor="#cccccc"
+                android:textSize="20sp"
+                android:visibility="gone" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_marginRight="30dp"
+            android:id="@+id/forgotPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="Forgot Password?"
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
+
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/submitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/gradientbackground1"
+            android:text="SIGN In"
+            android:textColor="#fff" />
+
+        <Button
+            android:id="@+id/typeChange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/gradientbackground1"
+            android:text="  Create an account  "
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
+
     </LinearLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColorHint="#cccccc">
-
-        <EditText
-            android:id="@+id/login_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ffff"
-            android:drawableStart="@drawable/ic_account_circle_black_24dp"
-            android:hint="   Email"
-            android:inputType="textEmailAddress"
-            android:textColor="#cccccc"
-            android:textSize="20sp" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColorHint="#cccccc">
-
-        <EditText
-            android:id="@+id/login_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ffff"
-            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
-            android:hint="   Password"
-            android:inputType="textPassword"
-            android:textColor="#cccccc"
-            android:textSize="20sp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColorHint="#cccccc">
-
-        <EditText
-            android:id="@+id/sign_up_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#ffff"
-            android:drawableStart="@drawable/ic_account_circle_black_24dp"
-            android:hint="   Username"
-            android:inputType="textPersonName"
-            android:textColor="#cccccc"
-            android:textSize="20sp"
-            android:visibility="gone"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:id="@+id/forgotPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="Forgot Password?"
-        android:textColor="#ffffff"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/gradientbackground1"
-        android:text="SIGN In"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/typeChange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/gradientbackground1"
-        android:text="  Create an account  "
-        android:textColor="#ffffff"
-        android:textSize="16sp" />
 
 
 </LinearLayout>
