--- a/app/src/main/res/layout/recycler_item_comp_detail.xml
+++ b/app/src/main/res/layout/recycler_item_comp_detail.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginHorizontal="8dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -32,12 +34,11 @@
                     android:textAlignment="center"
                     android:textSize="@dimen/homeCompRank"
                     android:textStyle="bold"
-                    android:layout_weight="1"
                     android:visibility="gone"/>
                 <ImageView
                     android:id="@+id/compDetailRankImageView"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_gravity="center"/>
 
                 <TextView
@@ -45,19 +46,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/blank_comp_time"
+                    android:layout_weight="1"
                     android:textAlignment="center"
-                    android:textSize="@dimen/homeCompTime"
-                    android:layout_weight="1"/>
+                    android:textSize="30dp" />
 
                 <TextView
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:id="@+id/compDetailUserTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/blank_user_name"
                     android:textAlignment="textEnd"
-                    android:textSize="@dimen/homeCompUserName"
+                    android:textSize="16dp"
+                    android:layout_marginRight="5dp"
                     android:textStyle="italic"
-                    android:layout_weight="1"/>
+                    tools:ignore="RtlCompat" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
