--- a/app/src/main/res/layout/fragment_comp_detail.xml
+++ b/app/src/main/res/layout/fragment_comp_detail.xml
@@ -9,10 +9,14 @@
     tools:context=".comp.CompDetailFragment">
 
     <Button
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="8dp"
+        android:background="@drawable/gradientbackground1"
         android:id="@+id/comp_detail_challenge_button"
         android:layout_width="wrap_content"
+        android:layout_gravity="right"
         android:layout_height="wrap_content"
-        android:text="チャレンジする"/>
+        android:text="  チャレンジする  "/>
 
     <android.support.v7.widget.CardView
         android:layout_marginHorizontal="8dp"
