--- a/app/src/main/res/layout/fragment_comp_detail.xml
+++ b/app/src/main/res/layout/fragment_comp_detail.xml
@@ -8,16 +8,6 @@
     android:orientation="vertical"
     tools:context=".comp.CompDetailFragment">
 
-    <Button
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginVertical="8dp"
-        android:background="@drawable/gradientbackground1"
-        android:id="@+id/comp_detail_challenge_button"
-        android:layout_width="wrap_content"
-        android:layout_gravity="right"
-        android:layout_height="wrap_content"
-        android:text="  チャレンジする  "/>
-
     <android.support.v7.widget.CardView
         android:layout_marginHorizontal="8dp"
         android:id="@+id/compDetailCardView"
@@ -79,9 +69,17 @@
 
     </android.support.v7.widget.CardView>
 
-
-
-
+    <Button
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="8dp"
+        android:background="@drawable/gradientbackground1"
+        android:id="@+id/comp_detail_challenge_button"
+        android:layout_width="match_parent"
+        android:textColor="#fff"
+        android:textSize="36dp"
+        android:paddingVertical="20dp"
+        android:layout_height="wrap_content"
+        android:text="  チャレンジする!!  "/>
     <android.support.v7.widget.RecyclerView
         android:layout_marginHorizontal="8dp"
         android:id="@+id/compDetailRecyclerView"
