--- a/app/src/main/res/layout/recycler_item_comp.xml
+++ b/app/src/main/res/layout/recycler_item_comp.xml
@@ -28,16 +28,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="8dp"
-                    android:text="競技名"
                     android:textColor="#202020"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/comp_list_timestamp_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="4dp"
-                    android:text="6s ago"
                     android:textAlignment="textEnd" />
             </LinearLayout>
 
@@ -46,7 +44,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="競技のルールをここに表示します"
                 android:textColor="#737373"
                 android:textSize="12sp" />
 
@@ -55,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="競技のタグをここに表示します。(例) #おもしろ #大食い　など"
+                android:text="競技のタグをここに表示します。(例) #おもしろ #大食い など"
                 android:textColor="#737373"
                 android:textSize="12sp" />
         </LinearLayout>
