--- a/app/src/main/res/layout-v26/fragment_comp_detail.xml
+++ b/app/src/main/res/layout-v26/fragment_comp_detail.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <!--<TextView-->
         <!--android:id="@+id/compDetailTitleTextView"-->
@@ -87,12 +86,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/compDetailRecyclerView"
-        android:layout_width="wrap_content"
+        android:layout_width="352dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compDetailCardView"
-        />
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
