--- a/app/src/main/res/layout/recycler_item_comp_detail.xml
+++ b/app/src/main/res/layout/recycler_item_comp_detail.xml
@@ -2,66 +2,104 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginVertical="8dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/comp_detail_card_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/compDetailImageView"
-                android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_weight="1" />
+                android:layout_width="352dp"
+                android:layout_height="198dp" />
 
-            <LinearLayout
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            <ImageView
+                android:id="@+id/compDetailRankImageView"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center"/>
 
-                <TextView
-                    android:id="@+id/compDetailRankTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/rank1"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/homeCompRank"
-                    android:textStyle="bold"
-                    android:visibility="gone"/>
-                <ImageView
-                    android:id="@+id/compDetailRankImageView"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/compDetailRankTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rank1"
+                android:textAlignment="center"
+                android:textSize="@dimen/homeCompRank"
+                android:textStyle="bold"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/compDetailTimeTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/blank_comp_time"
+                android:textAlignment="center"
+                android:textSize="48dp" />
+            <TextView
+                android:layout_weight="1"
+                android:gravity="center"
+                android:id="@+id/compDetailUserTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/blank_user_name"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="5dp"
+                android:textStyle="italic"
+                tools:ignore="RtlCompat" />
 
-                <TextView
-                    android:id="@+id/compDetailTimeTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/blank_comp_time"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
-
-                <TextView
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:id="@+id/compDetailUserTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/blank_user_name"
-                    android:textAlignment="textEnd"
-                    android:textSize="16sp"
-                    android:layout_marginRight="5dp"
-                    android:textStyle="italic"
-                    tools:ignore="RtlCompat" />
-            </LinearLayout>
         </LinearLayout>
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="200dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/compDetailRankTextView"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/rank1"-->
+                    <!--android:textAlignment="center"-->
+                    <!--android:textSize="@dimen/homeCompRank"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:visibility="gone"/>-->
+                <!--<ImageView-->
+                    <!--android:id="@+id/compDetailRankImageView"-->
+                    <!--android:layout_width="90dp"-->
+                    <!--android:layout_height="90dp"-->
+                    <!--android:layout_gravity="center"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/compDetailTimeTextView"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/blank_comp_time"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:textAlignment="center"-->
+                    <!--android:textSize="30sp" />-->
+
+                <!--<TextView-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center"-->
+                    <!--android:id="@+id/compDetailUserTextView"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/blank_user_name"-->
+                    <!--android:textAlignment="textEnd"-->
+                    <!--android:textSize="16sp"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:textStyle="italic"-->
+                    <!--tools:ignore="RtlCompat" />-->
+            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
     </android.support.v7.widget.CardView>
 </LinearLayout>
